# kube-parcel

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  TESTING.md  go.mod  go.sum  renovate.json
.github/workflows/: ci.yml  release.yaml
bazel/: BUILD.bazel  defs.bzl  extensions.bzl
cmd/client/: BUILD.bazel  main.go
cmd/runner/: BUILD.bazel  main.go
cmd/runner/ui/: index.html
docs/: K8S_MODE_ARCHITECTURE.md  USAGE.md
examples/: BUILD.bazel  README.md  client-pod-rbac.yaml
examples/configmap-app/: Chart.yaml  README.md  values.yaml
examples/configmap-app/templates/: configmap.yaml  deployment.yaml  test-config.yaml
examples/microservice/: Chart.yaml  README.md  values.yaml
examples/microservice/templates/: deployment.yaml  service.yaml  test-connection.yaml
pkg/client/: BUILD.bazel  bundle.go  launcher.go  transport.go
pkg/config/: BUILD.bazel  config.go  config_test.go
pkg/runner/: BUILD.bazel  handler.go  helm.go  k3s.go  state.go  state_test.go  tar.go
pkg/shared/: BUILD.bazel  types.go  types_test.go
tests/integration/: BUILD.bazel  run_k8s_mode_test.sh
tests/integration/inner-chart/: Chart.yaml
tests/integration/inner-chart/templates/: server.yaml  test.yaml
tests/integration/k8s-mode-test/: Chart.yaml  values.yaml
tests/integration/k8s-mode-test/templates/: inner-chart-cm.yaml  rbac.yaml  registry.yaml  test-pod.yaml
